--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>toboolist</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    
+    <header>
+
+    </header>
+    <main>
+        <header></header>
+        <section></section>
+        <section></section>
+        <section></section>
+    </main>
+    <footer>
+        
+    </footer>
 </body>
 </html>
