--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>toboolist</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/CSS/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&display=swap" rel="stylesheet">
 </head>
+
 <body>
 
     <header id="site_header">
         <div class="logo">
-            <img class="logo_img" width="40" src="./img/Logo.png" alt="logo image">        
+            <img class="logo_img" width="40" src="./img/Logo.png" alt="logo image"><h1>Toboolist</h1>        
         </div>
-        <h1>Toboolist</h1>
+        
     </header>
     <!--/header-->
 
