--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
                 <input type="button" value="Add Task" id="btn_newtask">
                 <input type="button" value="Add Section" id="btn_newsection">
             </div>
+            <hr>
             <!--/#actions-->
             <div id="options">
                 <ul>
@@ -42,7 +43,7 @@
                         <ul>
                             <li><span class="done">&check;</span>Recruiting blog post <span class="item-type editorial">Editorial</span></li>
                             <li><span class="done">&check;</span>Mobile app launch <span class="item-type q1_goals">Q1 Goals</span></li>
-                            <li><span class="notdone">&cross;</span>Interview John H. <span class="item-type recruiting">Recruiting</span></li>
+                            <li><span class="notdone">&times;</span>Interview John H. <span class="item-type recruiting">Recruiting</span></li>
                             <li><span class="done">&check;</span>Summit update to mobile storefronts <span class="item-type mobile">Mobile</span></li>
                         </ul>
                     </li>
@@ -50,7 +51,7 @@
                     <li class="option">
                         <h2><span>&dtrif;</span> Upcoming</h2>
                         <ul>
-                            <li><span class="notdone">&cross;</span>Schedule meeting with Alex</li>
+                            <li><span class="notdone">&times;</span>Schedule meeting with Alex</li>
                             <li><span class="done">&check;</span>Homepage refresh <span class="item-type website">Website</span></li>
                             <li><span class="done">&check;</span>Onboard new Sales team members <span class="item-type sales">Sales</span></li>
                             <li><span class="done">&check;</span>Review editorial calendar <span class="item-type editorial">Editorial</span></li>
